noinst_PROGRAMS = clist_example_basic clist_example_delete
clist_example_basic_SOURCES = clist_basic.c
clist_example_basic_LDFLAGS = -lm -L../src -lccontainer
clist_example_basic_CFLAGS = -I/usr/include -I../src

clist_example_delete_SOURCES = clist_delete.c
clist_example_delete_LDFLAGS = -lm -L../src -lccontainer
clist_example_delete_CFLAGS = -I/usr/include -I../src
